--- a/juego.html
+++ b/juego.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="/img/wilder.png">
+    <link type= "text/css" rel="stylesheet" href="/css/estilo.css">
+    <script type="text/javascript" scr="script.js"></script>
     <title>Tragamonedas</title>
 </head>
 <body>
@@ -30,10 +32,10 @@
         </div>
         <div id = "apostar">
             <div id = "montoApostar">Apostar</div>
-            <input id = "monto" type="text">
+            <input id = "monto" type="text">0
             <div id = "saldo">Saldo:</div>
-            <div id = "cantidadsaldo"></div>
             <div id = "$">$</div>
+            <div id = "cantidadsaldo"></div>
             <div></div>
         </div>
         <div class = "ventana">
