actualización de lanzamiento

--- a/juego.html
+++ b/juego.html
@@ -28,6 +28,7 @@
             <button id = "x100">x100</button>
             <button id = "x500">x500</button>
             <button id = "all_in">All IN</button>
+            <button id = "terminar">Terminar Juego</button>
         </div>
         <div id = "apostar">
             <div id = "montoApostar">Apostar $:</div>
